--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -2,6 +2,7 @@
   place: Igreja Santo Inácio
   time: "18:00"
   weekday: sábado
+  status: cancelled
   carousel:
     - igreja_santo_inacio.jpg
     - igreja_santo_inacio_interior.jpg
@@ -31,17 +32,20 @@
   place: Igreja Santo Antônio dos Pobres
   time: "18:00"
   weekday: sexta-feira
+  status: scheduled
   description:
     - Apresentação com o Coro de Câmara da ACC
 2024-12-14-0:
   place: Igreja dos Sagrados Corações de Jesus e Maria
   time: "18:00"
   weekday: sábado
+  status: scheduled
   description:
     - Encontro de coros da ACC
 2024-12-22-0:
   place:  Igreja Martin Luther
   time: "10:00"
   weekday: domingo
+  status: scheduled
   description:
     - Apresentação com o Coro Intercantus
