Non nobis domine

--- a/_data/songs.yaml
+++ b/_data/songs.yaml
@@ -144,8 +144,21 @@ non-nobis:
   title: Non Nobis Domine
   image: stickers-templar-cross-non-nobis-domine.jpg
   filter:
-    - dowland
+    - anonymous
     - sacra
+  description:
+    - Este <a href="https://pt.wikipedia.org/wiki/C%C3%A2none_(m%C3%BAsica)">cânone</a> tem como texto o início do <a href="https://www.cpdl.org/wiki/index.php/Psalm_115">Salmo 115</a>, que foi utilizado como lema pelos Cavaleiros Templários. É <a href="https://en.m.wikisource.org/wiki/A_Dictionary_of_Music_and_Musicians/Non_Nobis_Domine">usualmente utilizado na Inglaterra em refeições comunais e em outras ocasiões festivas</a>.
+    - A autoria do cânone é frequentemente atribuída à Byrd mas a peça já tinha considerável proeminência na segunda metade do século XVII <a href="https://www.jstor.org/stable/957361">sem ter esta atribuição de autoria</a>.
+  record:
+      autor (música): Anônimo
+      ano (música): <a href="https://www.jstor.org/stable/957361">Circa 1620</a>
+      língua: Latim
+  lyrics:
+    -
+      original:
+        Non nobis, Domine, non nobis, sed nomini tuo da gloriam
+      translation:
+        Não a nós, Senhor, não a nós,mas ao teu nome seja dada a glória
 magnificat-lassus:
   title: Magnificat VIII toni Lassus
   image: magnificat.jpg
