Consertando filtro anonimo

--- a/_data/songs.yaml
+++ b/_data/songs.yaml
@@ -144,7 +144,7 @@ non-nobis:
   title: Non Nobis Domine
   image: stickers-templar-cross-non-nobis-domine.jpg
   filter:
-    - anonymous
+    - anon
     - sacra
   description:
     - Este <a href="https://pt.wikipedia.org/wiki/C%C3%A2none_(m%C3%BAsica)">cânone</a> tem como texto o início do <a href="https://www.cpdl.org/wiki/index.php/Psalm_115">Salmo 115</a>, que foi utilizado como lema pelos Cavaleiros Templários. É <a href="https://en.m.wikisource.org/wiki/A_Dictionary_of_Music_and_Musicians/Non_Nobis_Domine">usualmente utilizado na Inglaterra em refeições comunais e em outras ocasiões festivas</a>.
