Apr. Sto. Ant. Pobres

--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -35,6 +35,23 @@
   status: scheduled
   description:
     - Apresentação com o Coro de Câmara da ACC
+  carousel:
+    - sto_antonio_pobres_orgao.jpg
+  program:
+    - jesu-rex
+    - ros
+    - ave-verum-byrd
+    - magnificat-lassus
+    - mignonne
+    - no-desmayes
+    - dindirindin
+    - pase-el-agua
+  record:
+    Alaúde: Alberto Brandão
+    Flauta doce e percussão: Isa Machado
+    Flauta doce e viola da gamba: Luiz Carlos Peçanha
+    Preparação vocal: Noeli Melo
+    Regência: Luiz Carlos Peçanha
 2024-12-14-0:
   place: Igreja dos Sagrados Corações de Jesus e Maria
   time: "18:00"
