Magnificat, Elisabete -> Isabel

--- a/_data/songs.yaml
+++ b/_data/songs.yaml
@@ -170,7 +170,7 @@ magnificat-lassus:
       língua: Latim
   description:
     - 
-      O texto do Magnificat é do primeiro capítulo do Evangelho de São Lucas, que conta a estória cristã da Anunciação. Maria, após receber a notícia que dará luz ao filho de Deus, visita sua prima Elisabete e descobre que esta também está grávida (de João Batista). Em resposta, Maria recita o texto. O trecho "Gloria Patri", acrescentado ao final, não faz parte do Evangelho.
+      O texto do Magnificat é do primeiro capítulo do Evangelho de São Lucas, que conta a estória cristã da Anunciação. Maria, após receber a notícia que dará luz ao filho de Deus, visita sua prima Isabel e descobre que esta também está grávida (de João Batista). Em resposta, Maria recita o texto. O trecho "Gloria Patri", acrescentado ao final, não faz parte do Evangelho.
     - 
       No início da renascença muitos compositores começaram a criar música para cantar o texto como parte das Vésperas, um deles sendo Orlando di Lasso. A estrutura é a de um salmo responsorial, com trechos sendo executados por um cantor solo e resposta de um coro. Os trechos solo seguem a estrutura do canto Gregoriano com os seus tons salmódicos, no caso desta peça temos o uso do oitavo tom.
     -
