Acerto horário de evento

--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -54,7 +54,7 @@
     Regência: Luiz Carlos Peçanha
 2024-12-14-0:
   place: Igreja dos Sagrados Corações de Jesus e Maria
-  time: "18:00"
+  time: "Após missa das 18:00"
   weekday: sábado
   status: scheduled
   description:
