--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -38,14 +38,14 @@
   carousel:
     - sto_antonio_pobres_orgao.jpg
   program:
-    - jesu-rex
-    - ros
-    - ave-verum-byrd
-    - magnificat-lassus
     - mignonne
     - no-desmayes
+    - ros
     - dindirindin
     - pase-el-agua
+    - jesu-rex
+    - ave-verum-byrd
+    - magnificat-lassus
   record:
     Alaúde: Alberto Brandão
     Flauta doce e percussão: Isa Machado
@@ -54,7 +54,7 @@
     Regência: Luiz Carlos Peçanha
 2024-12-14-0:
   place: Igreja dos Sagrados Corações de Jesus e Maria
-  time: "Após missa das 18:00"
+  time: "após missa das 18:00"
   weekday: sábado
   status: scheduled
   description:
