Acertos dados de apresentação

--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -50,6 +50,7 @@
     Alaúde: Alberto Brandão
     Flauta doce e percussão: Isa Machado
     Flauta doce e viola da gamba: Luiz Carlos Peçanha
+    Órgão: Rafael Simonaci 
     Preparação vocal: Noeli Melo
     Regência: Luiz Carlos Peçanha
 2024-12-14-0:
@@ -66,7 +67,6 @@
     - ros
     - magnificat-lassus
   record:
-    Alaúde: Alberto Brandão
     Flauta doce e percussão: Isa Machado
     Flauta doce e viola da gamba: Luiz Carlos Peçanha
     Preparação vocal: Noeli Melo
