--- a/_data/songs.yaml
+++ b/_data/songs.yaml
@@ -90,6 +90,8 @@ mignonne:
       tradução: <a href="https://primeiros-escritos.blogspot.com/2019/02/ode-cassandre-ronsard.html">Mário Laranjeira<a> (2004)
       autor (música): Jehan Chardavoine
       ano (música): <a href="https://imslp.org/wiki/Mignonne_allons_voir_si_la_rose_(Chardavoine%2C_Jehan)">1576</a>
+      autor (harmonização): <a href="https://www.sf-luth.org/eng/?%26nbsp%3BMusical_Publications/Le_Secret_des_Muses">Pascale Boquet</a>
+      ano (harmonização): 2006
 
   # Fontes
   # https://primeiros-escritos.blogspot.com/2019/02/ode-cassandre-ronsard.html
