Acertos pós apresentação 13/12; endurer ad

--- a/_data/events.yaml
+++ b/_data/events.yaml
@@ -32,24 +32,25 @@
   place: Igreja Santo Antônio dos Pobres
   time: "18:00"
   weekday: sexta-feira
-  status: scheduled
+  status: past
   description:
     - Apresentação com o Coro de Câmara da ACC
   carousel:
     - sto_antonio_pobres_orgao.jpg
   program:
-    - mignonne
-    - no-desmayes
-    - ros
-    - dindirindin
-    - pase-el-agua
     - jesu-rex
+    - ros
     - ave-verum-byrd
     - magnificat-lassus
+    - mignonne
+    - endurer
+    - no-desmayes
+    - dindirindin
+    - pase-el-agua
   record:
     Alaúde: Alberto Brandão
-    Flauta doce e percussão: Isa Machado
-    Flauta doce e viola da gamba: Luiz Carlos Peçanha
+    Flauta doce: Isa Machado
+    Flauta doce: Luiz Carlos Peçanha
     Órgão: Rafael Simonaci 
     Preparação vocal: Noeli Melo
     Regência: Luiz Carlos Peçanha
@@ -67,8 +68,6 @@
     - ros
     - magnificat-lassus
   record:
-    Flauta doce e percussão: Isa Machado
-    Flauta doce e viola da gamba: Luiz Carlos Peçanha
     Preparação vocal: Noeli Melo
     Regência: Luiz Carlos Peçanha
 2024-12-22-0:
